--- a/themes/lowkey/layouts/partials/list/default.html
+++ b/themes/lowkey/layouts/partials/list/default.html
@@ -3,7 +3,7 @@
         <h1 class="grow text-xl font-bold"> <a class="link-underlined" href=" {{ .Permalink }} ">{{ .Title }}</a></h1>
         <p class="grow-0 text-sm leading-7">{{ humanize .PublishDate.Day }} of {{ .PublishDate.Format "January 2006" }}</p>
     </div>
-    <div class="text-gray-600">
+    <div class="text-gray-600 text-xs">
     {{ if .Params.description }}
     {{ .Params.description }}    
     {{ else if .Summary  }}
