--- a/themes/lowkey/assets/css/main.css
+++ b/themes/lowkey/assets/css/main.css
@@ -39,19 +39,18 @@ body {
   text-shadow: 2px -1px var(--primary);
 }
 
-.card-underlined {
+.card-borderlined {
   text-shadow: 0px 0px var(--primary);
   border-bottom-width: 0;
-  background-image: linear-gradient(180deg, transparent 89%, var(--primary) 0);
-  background-size: 0 100%;
-  background-position: 0 100%;
+  background-image: linear-gradient(180deg, transparent 0%, var(--primary) 0);
+  background-size: 100% 8%;
+  background-position: 100% 0;
   background-repeat: no-repeat;
   transition: background-size .5s ease, text-shadow .5s ease;
 }
 
-.card-underlined:hover {
-  background-size: 100% 100%;
-  background-position: 0 100%;
+.card-borderlined:hover {
+  background-size: 100% 0;
   text-shadow: 1px -1px var(--primary);
 }
 
