--- a/themes/lowkey/layouts/partials/list/categories.html
+++ b/themes/lowkey/layouts/partials/list/categories.html
@@ -1,3 +1,8 @@
-<li>
+<a class="w-32 flex flex-col justify-center card-underlined" href=" {{ .Permalink }} ">
+   <p class="shadow-primary text-base text-center">⏺</p>
+   <p class="mt-1 text-xs text-center">{{ len .Pages }} post{{ if gt (len .Pages) 1 }}s{{ end }}</p>
+   <p class="text-sm leading-5 font-semibold text-center">{{ .Title }}</p>
+</a>
+<!-- <li>
    <a class="bg-gray-100 hover:bg-gray-200 transition-all duration-500 py-2 px-3 rounded-lg" href=" {{ .Permalink }} ">{{ .Title }} ({{ len .Pages }})</a>
-</li>
+</li> -->
