--- a/themes/lowkey/layouts/taxonomies/home.html
+++ b/themes/lowkey/layouts/taxonomies/home.html
@@ -5,11 +5,9 @@
 {{ if .Content }}<p class="content text-lg text-gray-900">{{ .Content }}</p>{{ end }}
 </div>
 
-<section class="py-10 flex flex-col gap-10 ">
-<ul class="taxonomy-list">
+<section class="py-10 grid grid-cols-2 sm:grid-cols-4 gap-10">
     {{ range $index, $pages}}
     {{ partial "list/categories" . }}
     {{ end }}
-</ul>
 </section>
 {{ end }}
