--- a/themes/lowkey/assets/css/main.css
+++ b/themes/lowkey/assets/css/main.css
@@ -42,15 +42,16 @@ body {
 .card-borderlined {
   text-shadow: 0px 0px var(--primary);
   border-bottom-width: 0;
-  background-image: linear-gradient(180deg, transparent 0%, var(--primary) 0);
-  background-size: 100% 8%;
-  background-position: 100% 0;
+  background-image: linear-gradient(180deg, transparent 0, var(--primary) 0);
+  background-size: 5% 5%;
+  background-position: 50% 17%;
   background-repeat: no-repeat;
-  transition: background-size .5s ease, text-shadow .5s ease;
+  transition: background-position .5s ease, background-size .5s ease, text-shadow .5s ease;
 }
 
 .card-borderlined:hover {
-  background-size: 100% 0;
+  background-size: 50% 7%;
+  background-position: 50% 100%;
   text-shadow: 1px -1px var(--primary);
 }
 
