--- a/themes/lowkey/layouts/partials/footer/copyright.html
+++ b/themes/lowkey/layouts/partials/footer/copyright.html
@@ -1,3 +1,3 @@
-<div class="text-xs font-semibold text-gray-500 order-2 sm:order-1 ">
-    © {{ replace .Site.Copyright "{year}" now.Year }} — <a class="hover:text-gray-500" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
+<div class="text-xs font-semibold custom-gray order-2 sm:order-1 ">
+    © {{ replace .Site.Copyright "{year}" now.Year }} - <a class="custom-gray-link" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
 </div>
