--- a/themes/lowkey/layouts/resume/home.html
+++ b/themes/lowkey/layouts/resume/home.html
@@ -1,6 +1,41 @@
 {{ define "main" }}
 {{ $pages := .Pages }}
 <div class="flex flex-col gap-1">
-{{ if .Content }}<p class="content text-lg text-gray-900">{{ .Content }}</p>{{ end }}
-</div>
+<h1 class="text-2xl font-extrabold">{{ if .Params.header }}{{ .Params.header }}{{ else }}{{ .Title }}{{ end }}</h1>
+{{ if .Content }}
+    <p class="content text-lg text-gray-900">{{ .Content }}</p>
 {{ end }}
+</div>
+
+<div class="p-7 block-section">
+    <div class="mb-5 rounded-2xl border border-zinc-100 p-6 dark:border-zinc-700/40">
+        <h2 class="flex text-base font-semibold">
+          <!-- <IconIfNeeded class="h-6 w-6 flex-none" /> -->
+          <span class="ml-3 menu-selected">Experiences</span>
+        </h2>
+        {{ range where .Site.Pages "Section" "resume" }}
+        {{ range .Pages }}
+                {{ if eq .Params.kind "experience" }}
+                    {{ partial "list/experience" . }}
+                {{ end }}
+        {{ end }}
+        {{ end }}
+    </div>
+
+    <div class="rounded-2xl border border-zinc-100 p-6 dark:border-zinc-700/40">
+        <h2 class="flex text-base font-semibold">
+          <!-- <IconIfNeeded class="h-6 w-6 flex-none" /> -->
+          <span class="ml-3 menu-selected">Education</span>
+        </h2>
+        {{ range where .Site.Pages "Section" "resume" }}
+        {{ range .Pages }}
+                {{ if eq .Params.kind "education" }}
+                    {{ partial "list/experience" . }}
+                {{ end }}
+        {{ end }}
+        {{ end }}
+    </div>
+</div>
+
+{{ end }}
+
