--- a/themes/blog/layouts/partials/list/experience.html
+++ b/themes/blog/layouts/partials/list/experience.html
@@ -6,7 +6,7 @@
       </div>
     {{ end }}
       <dl class="flex flex-auto flex-wrap gap-x-2">
-        <dt class="sr-only">Company</dt>
+        <dt class="sr-only">Company or School</dt>
         <dd class="w-full flex-none text-sm font-semibold">
             {{ .Title }}
         </dd>
