--- a/themes/blog/layouts/resume/home.html
+++ b/themes/blog/layouts/resume/home.html
@@ -6,9 +6,7 @@
 </div>
 
 <div class="p-7 block-section">
-  <div
-    class="mb-5 rounded-2xl border border-zinc-100 p-6 dark:border-zinc-700/40"
-  >
+  <div class="mb-5 rounded-2xl border border-zinc-100 p-6">
     <h2 class="flex text-base font-semibold">
       <!-- <IconIfNeeded class="h-6 w-6 flex-none" /> -->
       <span class="ml-3 menu-selected pr-2">Experiences</span>
@@ -18,7 +16,7 @@
     "list/experience" . }} {{ end }} {{ end }} {{ end }}
   </div>
 
-  <div class="rounded-2xl border border-zinc-100 p-6 dark:border-zinc-700/40">
+  <div class="rounded-2xl border border-zinc-100 p-6">
     <h2 class="flex text-base font-semibold">
       <!-- <IconIfNeeded class="h-6 w-6 flex-none" /> -->
       <span class="ml-3 menu-selected pr-2">Education</span>
