--- a/themes/blog/layouts/_default/baseof.html
+++ b/themes/blog/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
   <head>
     {{- partial "head.html" . -}}
   </head>
-  <body class="max-w-screen-md px-10 mx-auto">
+  <body class="max-w-3xl px-10 mx-auto">
     {{- partial "header.html" . -}}
     <div id="content">{{- block "main" . }}{{- end }}</div>
     {{- partial "footer.html" . -}}
