--- a/themes/blog/layouts/partials/list/experience.html
+++ b/themes/blog/layouts/partials/list/experience.html
@@ -2,7 +2,7 @@
   <li key="1" class="flex gap-4">
     {{ with .Page.Resources.GetMatch (.Params.logo) }}
     <div
-      class="relative mt-1 flex h-10 w-10 flex-none items-center justify-center rounded-full shadow-md shadow-zinc-800/5 ring-1 ring-zinc-900/5 dark:border dark:border-zinc-700/50 dark:bg-zinc-800 dark:ring-0"
+      class="relative mt-1 flex h-10 w-10 flex-none items-center justify-center rounded-full shadow-md shadow-zinc-800/5 ring-1 ring-zinc-900/5"
     >
       <img loading="lazy" class="w-7" src="{{ .RelPermalink }}" />
     </div>
