feat: uniform design

--- a/themes/blog/layouts/partials/head/meta.html
+++ b/themes/blog/layouts/partials/head/meta.html
@@ -1,10 +1,13 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }}{{ end }}</title>
+<title>
+  {{ if .IsHome }} {{ .Site.Title }} {{ else }} {{ .Site.Title }} - {{ .Title }}
+  {{ end }}
+</title>
 <meta
   name="description"
-  content="{{ if .IsPage }}{{ or .Params.description .Summary }}{{ else if .IsHome }}{{ .Site.Params.description }}{{ else if .IsNode }}{{ or .Params.description .Summary }}{{ end }}"
+  content="{{ .Site.Title }} - Personal Blog / Resume - {{ or .Params.description .Summary }}"
 />
 <link rel="canonical" href="{{ .Permalink }}" />
 <link rel="robots" href="/robots.txt" />
