--- a/themes/blog/layouts/partials/list/default.html
+++ b/themes/blog/layouts/partials/list/default.html
@@ -5,12 +5,12 @@
         >{{ .Title }} <span class="shadow-primary text-base">⏺</span></a
       >
     </h1>
-    <p class="grow-0 text-sm leading-7">
+    <p class="grow-0 leading-7 text-xs font-medium custom-gray-dark">
       {{ humanize .PublishDate.Day }} of {{ .PublishDate.Format "January 2006"
       }}
     </p>
   </div>
-  <div class="text-gray-600 text-xs">
+  <div class="custom-gray-dark text-xs">
     {{ if .Params.description }} {{ .Params.description }} {{ else if .Summary
     }} {{ .Summary }} {{ end }}
   </div>
