--- a/themes/blog/layouts/partials/single/homepage.html
+++ b/themes/blog/layouts/partials/single/homepage.html
@@ -1,8 +1,6 @@
 <article class="flex flex-col gap-5">
   <header class="flex flex-col gap-2">
-    {{ partial "single/components/title/small" . }}
+    {{ partial "single/components/title/large" . }}
   </header>
-  <section class="content text-lg text-gray-800">
-    {{ .Content | emojify }}
-  </section>
+  <section class="custom-gray-dark">{{ .Content | emojify }}</section>
 </article>
