--- a/themes/blog/assets/css/main.css
+++ b/themes/blog/assets/css/main.css
@@ -34,6 +34,10 @@ body {
   color: var(--gray);
 }
 
+.custom-dark {
+  color: var(--black);
+}
+
 .custom-gray-link:hover {
   color: var(--gray);
 }
