--- a/themes/blog/layouts/404.html
+++ b/themes/blog/layouts/404.html
@@ -1,10 +1,10 @@
 {{ define "main" }}
 
-<article class="flex flex-col gap-3">
-  <header>
-    <h2 class="text-2xl font-extrabold text-gray-900">{{ .Title }}</h2>
+<article class="flex flex-col gap-5">
+  <header class="flex flex-col gap-2">
+    {{ partial "single/components/title/large" . }}
   </header>
-  <section class="content text-lg text-gray-800">
+  <section class="custom-gray-dark">
     Looks like you've followed a broken link or entered a URL that doesn't exist
     on this site.
   </section>
