--- a/themes/blog/layouts/_default/list.html
+++ b/themes/blog/layouts/_default/list.html
@@ -1,10 +1,7 @@
 {{ define "main" }} {{ $pages := .Pages }} {{ $paginator := .Paginate $pages }}
 <div class="flex flex-col gap-1">
-  <h1 class="text-2xl font-extrabold">
-    {{ if .Params.header }}{{ .Params.header }}{{ else }}{{ .Title }}{{ end }}
-  </h1>
-  {{ if .Content }}
-  <p class="content text-lg text-gray-900">{{ .Content }}</p>
+  {{ partial "single/components/title/small" . }} {{ if .Content }}
+  <div class="custom-gray-dark">{{ .Content }}</div>
   {{ end }}
 </div>
 
