--- a/themes/blog/layouts/partials/single/components/metatag/tags.html
+++ b/themes/blog/layouts/partials/single/components/metatag/tags.html
@@ -1,5 +1,5 @@
 {{ with (.GetTerms "tags") }}
-<div class="pb-14 taxonomy-list tags-list text-gray-600 text-sm font-medium">
+<div class="pb-14 taxonomy-list tags-list custom-gray-dark text-sm font-medium">
   {{ range . }}
   <a
     class="bg-gray-100 py-2 px-3 rounded-lg"
