--- a/themes/blog/layouts/partials/single/components/title/small.html
+++ b/themes/blog/layouts/partials/single/components/title/small.html
@@ -1,1 +1,3 @@
-<h2 class="text-2xl font-extrabold text-gray-900">{{ .Title }}</h2>
+<h2 class="text-2xl font-extrabold menu-selected w-fit pr-4">
+  {{ if .Params.header }}{{ .Params.header }}{{ else }}{{ .Title }}{{ end }}
+</h2>
