--- a/themes/blog/layouts/resume/home.html
+++ b/themes/blog/layouts/resume/home.html
@@ -1,10 +1,7 @@
 {{ define "main" }} {{ $pages := .Pages }}
 <div class="flex flex-col gap-1">
-  <h1 class="text-2xl font-extrabold">
-    {{ if .Params.header }}{{ .Params.header }}{{ else }}{{ .Title }}{{ end }}
-  </h1>
-  {{ if .Content }}
-  <p class="content text-lg">{{ .Content }}</p>
+  {{ partial "single/components/title/small" . }} {{ if .Content }}
+  <div class="custom-gray-dark">{{ .Content }}</div>
   {{ end }}
 </div>
 
@@ -14,7 +11,7 @@
   >
     <h2 class="flex text-base font-semibold">
       <!-- <IconIfNeeded class="h-6 w-6 flex-none" /> -->
-      <span class="ml-3 menu-selected">Experiences</span>
+      <span class="ml-3 menu-selected pr-2">Experiences</span>
     </h2>
     {{ range where .Site.Pages "Section" "resume" }} {{ range (sort .Pages
     ".Params.order" "desc") }} {{ if eq .Params.type "experience" }} {{ partial
@@ -24,7 +21,7 @@
   <div class="rounded-2xl border border-zinc-100 p-6 dark:border-zinc-700/40">
     <h2 class="flex text-base font-semibold">
       <!-- <IconIfNeeded class="h-6 w-6 flex-none" /> -->
-      <span class="ml-3 menu-selected">Education</span>
+      <span class="ml-3 menu-selected pr-2">Education</span>
     </h2>
     {{ range where .Site.Pages "Section" "resume" }} {{ range .Pages }} {{ if eq
     .Params.type "education" }} {{ partial "list/experience" . }} {{ end }} {{
