style: add favicon

--- a/themes/blog/layouts/partials/head/meta.html
+++ b/themes/blog/layouts/partials/head/meta.html
@@ -8,3 +8,5 @@
 />
 <link rel="canonical" href="{{ .Permalink }}" />
 <link rel="robots" href="/robots.txt" />
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
