--- a/themes/blog/layouts/partials/header.html
+++ b/themes/blog/layouts/partials/header.html
@@ -21,6 +21,7 @@
 >
   {{ partial "header/avatar" . }}
   <div class="flex flex-col gap-5">
-    {{ partial "header/title" . }} {{ partial "header/nav" . }}
+    {{ partial "header/title" . }}
+    {{ partial "header/nav" . }}
   </div>
 </header>
