--- a/themes/blog/layouts/partials/processor/svg.html
+++ b/themes/blog/layouts/partials/processor/svg.html
@@ -1,4 +1,10 @@
-{{- $iconFile := resources.GetMatch (printf "icons/%s.svg" .) -}} {{- if
-$iconFile -}} {{- $iconFile.Content | safeHTML -}} {{- else -}} {{- errorf
-"Error: icon '%s.svg' is not found under 'assets/icons' folder" . -}} {{- end
+{{- $iconFile := resources.GetMatch (printf "icons/%s.svg" .) -}}
+{{- if
+  $iconFile
 -}}
+  {{- $iconFile.Content | safeHTML -}}
+{{- else -}}
+  {{- errorf
+    "Error: icon '%s.svg' is not found under 'assets/icons' folder" .
+  -}}
+{{- end -}}
