--- a/themes/blog/layouts/partials/single/components/title/large.html
+++ b/themes/blog/layouts/partials/single/components/title/large.html
@@ -1,5 +1,9 @@
 <h2
   class="text-4xl leading-snug font-bold text-center menu-selected w-fit pr-8"
 >
-  {{ if .Params.header }}{{ .Params.header }}{{ else }}{{ .Title }}{{ end }}
+  {{ if .Params.header }}
+    {{ .Params.header }}
+  {{ else }}
+    {{ .Title }}
+  {{ end }}
 </h2>
