--- a/themes/blog/layouts/_default/list.html
+++ b/themes/blog/layouts/_default/list.html
@@ -1,13 +1,18 @@
-{{ define "main" }} {{ $pages := .Pages }} {{ $paginator := .Paginate $pages }}
-<div class="flex flex-col gap-1">
-  {{ partial "single/components/title/small" . }} {{ if .Content }}
-  <div class="custom-gray-dark">{{ .Content }}</div>
-  {{ end }}
-</div>
+{{ define "main" }}
+  {{ $pages := .Pages }}
+  {{ $paginator := .Paginate $pages }}
+  <div class="flex flex-col gap-1">
+    {{ partial "single/components/title/small" . }}
+    {{ if .Content }}
+      <div class="custom-gray-dark">{{ .Content }}</div>
+    {{ end }}
+  </div>
 
-<section class="py-10 flex flex-col gap-10">
-  {{ range $index, $pages := $paginator.Pages }} {{ partial "list/default" . }}
-  {{ end }}
-</section>
+  <section class="py-10 flex flex-col gap-10">
+    {{ range $index, $pages := $paginator.Pages }}
+      {{ partial "list/default" . }}
+    {{ end }}
+  </section>
 
-{{ partial "list/components/pagination" . }} {{ end }}
+  {{ partial "list/components/pagination" . }}
+{{ end }}
