--- a/themes/blog/layouts/partials/footer.html
+++ b/themes/blog/layouts/partials/footer.html
@@ -1,3 +1,4 @@
 <footer class="mt-10 pt-5 pb-10 grid gap-3 sm:grid-cols-2">
-  {{ partial "footer/copyright" . }} {{ partial "footer/social" . }}
+  {{ partial "footer/copyright" . }}
+  {{ partial "footer/social" . }}
 </footer>
