--- a/themes/blog/layouts/partials/head/meta.html
+++ b/themes/blog/layouts/partials/head/meta.html
@@ -2,7 +2,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>
-  {{ if .IsHome }} {{ .Site.Title }} {{ else }} {{ .Site.Title }} - {{ .Title }}
+  {{ if .IsHome }}
+    {{ .Site.Title }}
+  {{ else }}
+    {{ .Site.Title }} -
+    {{ .Title }}
   {{ end }}
 </title>
 <meta
