--- a/themes/blog/layouts/partials/header/avatar.html
+++ b/themes/blog/layouts/partials/header/avatar.html
@@ -1,9 +1,11 @@
-{{ $avatar := resources.GetMatch .Site.Params.avatar }} {{ $tiny :=
-($avatar.Fill "80x80 q90") }}
+{{ $avatar := resources.GetMatch .Site.Params.avatar }}
+{{ $tiny :=
+  ($avatar.Fill "80x80 q90")
+}}
 <figure class="flex-none w-20 h-20 rounded-full overflow-hidden">
   <a href="{{ .Site.BaseURL }}"
     ><img
-      srcset="{{- with $tiny.RelPermalink -}}{{.}} 80w{{- end -}}"
+      srcset="{{- with $tiny.RelPermalink -}}{{ . }} 80w{{- end -}}"
       src="{{ $avatar.RelPermalink }}"
       width="{{ $avatar.Width }}"
       height="{{ $avatar.Height }}"
