--- a/themes/blog/layouts/partials/list/components/pagination.html
+++ b/themes/blog/layouts/partials/list/components/pagination.html
@@ -1,28 +1,32 @@
-{{ $paginator := .Paginator }} {{ with $paginator }} {{ if or (.HasPrev)
-(.HasNext) }}
-<div class="pb-10 grid grid-cols-2 font-semibold">
-  <!-- Previous page. -->
-  <div>
-    {{ if .HasPrev }}
-    <a href="{{ .Prev.URL }}" class="inline-flex items-center gap-2">
-      <span class="h-4 w-4 stroke-2">
-        {{ partial "processor/svg" "arrow-left" }}
-      </span>
-      Newer Posts
-    </a>
-    {{ end }}
-  </div>
+{{ $paginator := .Paginator }}
+{{ with $paginator }}
+  {{ if or (.HasPrev)
+    (.HasNext)
+  }}
+    <div class="pb-10 grid grid-cols-2 font-semibold">
+      <!-- Previous page. -->
+      <div>
+        {{ if .HasPrev }}
+          <a href="{{ .Prev.URL }}" class="inline-flex items-center gap-2">
+            <span class="h-4 w-4 stroke-2">
+              {{ partial "processor/svg" "arrow-left" }}
+            </span>
+            Newer Posts
+          </a>
+        {{ end }}
+      </div>
 
-  <div class="flex justify-end">
-    <!-- Next page. -->
-    {{ if .HasNext }}
-    <a href="{{ .Next.URL }}" class="inline-flex items-center gap-2">
-      Older Posts
-      <span class="h-4 w-4 stroke-2">
-        {{ partial "processor/svg" "arrow-right" }}
-      </span>
-    </a>
-    {{ end }}
-  </div>
-</div>
-{{ end }} {{ end }}
+      <div class="flex justify-end">
+        <!-- Next page. -->
+        {{ if .HasNext }}
+          <a href="{{ .Next.URL }}" class="inline-flex items-center gap-2">
+            Older Posts
+            <span class="h-4 w-4 stroke-2">
+              {{ partial "processor/svg" "arrow-right" }}
+            </span>
+          </a>
+        {{ end }}
+      </div>
+    </div>
+  {{ end }}
+{{ end }}
