--- a/themes/blog/layouts/partials/single/components/comments/comments.html
+++ b/themes/blog/layouts/partials/single/components/comments/comments.html
@@ -1,8 +1,16 @@
 {{ if .IsPage }}
-<!-- giscus -->
-{{ if .Site.Params.giscus.enable }} {{ partial
-"single/components/comments/giscus" . }} {{ end }}
+  <!-- giscus -->
+  {{ if .Site.Params.giscus.enable }}
+    {{ partial
+      "single/components/comments/giscus" .
+    }}
+  {{ end }}
 
-<!-- disqus -->
-{{ if .Site.Params.disqusShortname }} {{ partial
-"single/components/comments/disqus" . }} {{ end }} {{ end }}
+
+  <!-- disqus -->
+  {{ if .Site.Params.disqusShortname }}
+    {{ partial
+      "single/components/comments/disqus" .
+    }}
+  {{ end }}
+{{ end }}
