--- a/themes/blog/layouts/partials/single/components/comments/disqus.html
+++ b/themes/blog/layouts/partials/single/components/comments/disqus.html
@@ -1,4 +1,6 @@
 <div class="disqus-comment">
-  {{/* https://gohugo.io/templates/internal/#disqus */}} {{- template
-  "_internal/disqus.html" . -}}
+  {{/* https://gohugo.io/templates/internal/#disqus */}}
+  {{- template
+    "_internal/disqus.html" .
+  -}}
 </div>
