--- a/themes/blog/layouts/partials/single/components/comments/giscus.html
+++ b/themes/blog/layouts/partials/single/components/comments/giscus.html
@@ -12,14 +12,11 @@
     data-input-position="{{ .Site.Params.giscus.inputPosition | default `top` }}"
     data-theme="{{ .Site.Params.giscus.theme | default `light` }}"
     data-lang="{{ .Site.Params.giscus.lang | default `en` }}"
-    {{
-    if
-    .Site.Params.giscus.lazyLoading
+    {{ if
+      .Site.Params.giscus.lazyLoading
     }}
-    data-loading="lazy"
-    {{
-    end
-    }}
+      data-loading="lazy"
+    {{ end }}
     crossorigin="anonymous"
     async
   ></script>
