style: format all

--- a/themes/blog/layouts/partials/footer/copyright.html
+++ b/themes/blog/layouts/partials/footer/copyright.html
@@ -1,3 +1,4 @@
-<div class="text-xs font-semibold custom-gray order-2 sm:order-1 ">
-    © {{ replace .Site.Copyright "{year}" now.Year }} - <a class="custom-gray-link" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
+<div class="text-xs font-semibold custom-gray order-2 sm:order-1">
+  © {{ replace .Site.Copyright "{year}" now.Year }} -
+  <a class="custom-gray-link" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
 </div>
