--- a/themes/blog/layouts/_default/baseof.html
+++ b/themes/blog/layouts/_default/baseof.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="{{ .Site.LanguageCode | default `en` }}" class="scroll-smooth">
-    <head>
+  <head>
     {{- partial "head.html" . -}}
-    </head>
-    <body class="max-w-screen-md px-10 mx-auto">
-        {{- partial "header.html" . -}}
-        <div id="content">
-        {{- block "main" . }}{{- end }}
-        </div>
-        {{- partial "footer.html" . -}}
-    </body>
+  </head>
+  <body class="max-w-screen-md px-10 mx-auto">
+    {{- partial "header.html" . -}}
+    <div id="content">{{- block "main" . }}{{- end }}</div>
+    {{- partial "footer.html" . -}}
+  </body>
 </html>
