--- a/themes/blog/layouts/partials/footer/social.html
+++ b/themes/blog/layouts/partials/footer/social.html
@@ -1,5 +1,15 @@
 <div class="text-xs font-semibold custom-gray order-1 sm:order-2">
-    <ul class="flex sm:justify-end gap-5">
-    {{ with site.Menus.social }}{{ range . }}<li><a class="custom-gray-link" href="{{ .URL }}" target="_blank" rel="noopener noreferrer">{{ .Name }}</a></li>{{ end }}{{ end }}
-    </ul>
+  <ul class="flex sm:justify-end gap-5">
+    {{ with site.Menus.social }}{{ range . }}
+    <li>
+      <a
+        class="custom-gray-link"
+        href="{{ .URL }}"
+        target="_blank"
+        rel="noopener noreferrer"
+        >{{ .Name }}</a
+      >
+    </li>
+    {{ end }}{{ end }}
+  </ul>
 </div>
