--- a/themes/blog/layouts/partials/head.html
+++ b/themes/blog/layouts/partials/head.html
@@ -1,2 +1,2 @@
-{{ block "meta" . }}{{ partial "head/meta" . }}{{ end }}
-{{ block "postcss" . }}{{ partial "postcss" "css/main.css" }}{{ end }}
+{{ block "meta" . }}{{ partial "head/meta" . }}{{ end }} {{ block "postcss" .
+}}{{ partial "postcss" "css/main.css" }}{{ end }}
