--- a/themes/blog/layouts/partials/header/title.html
+++ b/themes/blog/layouts/partials/header/title.html
@@ -1,7 +1,11 @@
 <a href="{{ .Site.BaseURL }}">
-    {{ if .IsHome }}
-    <h1 class="text-center shadow-primary sm:text-left text-4xl font-extrabold">{{ .Site.Title }}</h1>
-    {{ else }}
-    <h3 class="text-center shadow-primary sm:text-left text-4xl font-extrabold">{{ .Site.Title }}</h3>
-    {{ end }}
+  {{ if .IsHome }}
+  <h1 class="text-center shadow-primary sm:text-left text-4xl font-extrabold">
+    {{ .Site.Title }}
+  </h1>
+  {{ else }}
+  <h3 class="text-center shadow-primary sm:text-left text-4xl font-extrabold">
+    {{ .Site.Title }}
+  </h3>
+  {{ end }}
 </a>
