--- a/themes/blog/layouts/partials/list/categories.html
+++ b/themes/blog/layouts/partials/list/categories.html
@@ -1,6 +1,10 @@
-<a class="w-32 pt-1 flex flex-col justify-center card-borderlined" href=" {{ .Permalink }} ">
-   <p class="shadow-primary text-base text-center">⏺</p>
-   <p class="mt-1 text-xs text-center">{{ len .Pages }} post{{ if gt (len .Pages) 1 }}s{{ end }}</p>
-   <p class="text-sm leading-5 font-semibold text-center">{{ .Title }}</p>
+<a
+  class="w-32 pt-1 flex flex-col justify-center card-borderlined"
+  href=" {{ .Permalink }} "
+>
+  <p class="shadow-primary text-base text-center">⏺</p>
+  <p class="mt-1 text-xs text-center">
+    {{ len .Pages }} post{{ if gt (len .Pages) 1 }}s{{ end }}
+  </p>
+  <p class="text-sm leading-5 font-semibold text-center">{{ .Title }}</p>
 </a>
-
