--- a/themes/blog/layouts/partials/single/components/metatag/categories.html
+++ b/themes/blog/layouts/partials/single/components/metatag/categories.html
@@ -1,8 +1,9 @@
-{{ with (.GetTerms "categories") }}
-        —
-        {{ range . }}
-            <a class="hover:text-gray-500" href="{{ .RelPermalink }}" alt="{{ .LinkTitle }}" >
-                {{ .LinkTitle }}
-                </a>
-        {{ end }}
-{{ end }}
+{{ with (.GetTerms "categories") }} — {{ range . }}
+<a
+  class="hover:text-gray-500"
+  href="{{ .RelPermalink }}"
+  alt="{{ .LinkTitle }}"
+>
+  {{ .LinkTitle }}
+</a>
+{{ end }} {{ end }}
