--- a/themes/blog/layouts/taxonomies/home.html
+++ b/themes/blog/layouts/taxonomies/home.html
@@ -1,13 +1,14 @@
-{{ define "main" }}
-{{ $pages := .Pages }}
+{{ define "main" }} {{ $pages := .Pages }}
 <div class="flex flex-col gap-1">
-<h1 class="text-2xl font-extrabold">{{ if .Params.header }}{{ .Params.header }}{{ else }}{{ .Title }}{{ end }}</h1>
-{{ if .Content }}<p class="content text-lg text-gray-900">{{ .Content }}</p>{{ end }}
+  <h1 class="text-2xl font-extrabold">
+    {{ if .Params.header }}{{ .Params.header }}{{ else }}{{ .Title }}{{ end }}
+  </h1>
+  {{ if .Content }}
+  <p class="content text-lg text-gray-900">{{ .Content }}</p>
+  {{ end }}
 </div>
 
 <section class="py-10 grid grid-cols-2 sm:grid-cols-4 gap-10">
-    {{ range $index, $pages}}
-    {{ partial "list/categories" . }}
-    {{ end }}
+  {{ range $index, $pages}} {{ partial "list/categories" . }} {{ end }}
 </section>
 {{ end }}
