--- a/themes/blog/layouts/partials/footer.html
+++ b/themes/blog/layouts/partials/footer.html
@@ -1,4 +1,6 @@
-<footer class="mt-10 pt-5 pb-10 grid gap-3 sm:grid-cols-2">
+<footer
+  class="text-center sm:text-left sm:mt-10 pt-5 pb-10 grid gap-3 sm:grid-cols-2"
+>
   {{ partial "footer/copyright" . }}
   {{ partial "footer/social" . }}
 </footer>
