--- a/themes/blog/layouts/partials/footer/social.html
+++ b/themes/blog/layouts/partials/footer/social.html
@@ -1,5 +1,5 @@
 <div class="text-xs font-semibold custom-gray order-1 sm:order-2">
-  <ul class="flex sm:justify-end gap-5">
+  <ul class="flex justify-center sm:justify-end gap-5">
     {{ with site.Menus.social }}
       {{ range . }}
         <li>
