--- a/themes/blog/layouts/partials/single/default.html
+++ b/themes/blog/layouts/partials/single/default.html
@@ -1,14 +1,14 @@
 <article class="flex flex-col gap-10">
   <header class="flex flex-col gap-2">
     {{ partial "single/components/title/large" . }}
-    <div class="text-sm font-semibold text-gray-500 flex gap-3">
+    <div class="text-sm font-semibold custom-gray-dark flex gap-3">
       {{ partial "single/components/metatag/time" . }}
       {{ partial
         "single/components/metatag/categories" .
       }}
     </div>
   </header>
-  <section class="content text-lg text-gray-800">
+  <section class="content custom-prose text-lg text-gray-800">
     {{ .Content | emojify }}
   </section>
   {{ partial "single/components/comments/comments" . }}
