fix: small launch fix

--- a/themes/blog/layouts/partials/list/categories.html
+++ b/themes/blog/layouts/partials/list/categories.html
@@ -2,7 +2,7 @@
   class="w-32 pt-1 flex flex-col justify-center card-borderlined"
   href=" {{ .Permalink }} "
 >
-  <p class="shadow-primary text-base text-center">⏺</p>
+  <p class="shadow-primary text-base text-center">&#9900</p>
   <p class="mt-1 text-xs text-center">
     {{ len .Pages }}
     post{{ if gt (len .Pages) 1 }}s{{ end }}
