--- a/themes/blog/layouts/partials/list/default.html
+++ b/themes/blog/layouts/partials/list/default.html
@@ -2,7 +2,7 @@
   <div class="flex flex-wrap w-full">
     <h1 class="grow text-xl font-bold">
       <a class="link-underlined" href=" {{ .Permalink }} "
-        >{{ .Title }} <span class="shadow-primary text-base">⏺</span></a
+        >{{ .Title }} <span class="shadow-primary text-base">&#9900</span></a
       >
     </h1>
     <p class="grow-0 leading-7 text-xs font-medium custom-gray-dark">
