--- a/themes/blog/layouts/resume/home.html
+++ b/themes/blog/layouts/resume/home.html
@@ -7,7 +7,7 @@
     {{ end }}
   </div>
 
-  <div class="py-7 sm:px-7 block-section">
+  <div class="py-7 sm:px-7 block-section resume">
     <div class="mb-5 rounded-2xl border border-zinc-100 p-6">
       <h2 class="flex text-base font-semibold">
         <!-- <IconIfNeeded class="h-6 w-6 flex-none" /> -->
