--- a/themes/blog/assets/css/main.css
+++ b/themes/blog/assets/css/main.css
@@ -97,6 +97,45 @@ body {
   text-shadow: 1px -1px var(--primary);
 }
 
+.resume-title,
+.resume-date {
+  display: inline-block;
+  width: calc(50% - 0.5rem);
+  margin: 0;
+}
+
+.resume-date {
+  text-align: right;
+}
+
+.resume p:not(:last-child) {
+  margin-bottom: 1em;
+}
+
+.resume :where(ul) {
+  list-style-type: none;
+  margin-top: 1.25em;
+  margin-bottom: 1.25em;
+  padding-inline-start: 1.625em;
+}
+
+.resume :where(ul > li) {
+  position: relative;
+  padding-inline-start: 0.375em;
+}
+
+.resume :where(ul > li):before {
+  content: "\2022";
+  color: var(--dark);
+  text-shadow: 3px -2px var(--primary);
+  font-size: 3em;
+  line-height: 24px;
+  position: absolute;
+  top: 50%;
+  margin-top: -16px;
+  margin-left: -24px;
+}
+
 @layer base {
   /** =================== MONTSERRAT =================== **/
 
