--- a/themes/blog/layouts/partials/list/experience.html
+++ b/themes/blog/layouts/partials/list/experience.html
@@ -1,23 +1,43 @@
 <ol class="mt-4 space-y-4">
   <li key="1" class="flex gap-4">
-    {{ with .Page.Resources.GetMatch (.Params.logo) }}
-      <div
-        class="relative mt-1 flex h-10 w-10 flex-none items-center justify-center rounded-full shadow-md shadow-zinc-800/5 ring-1 ring-zinc-900/5"
-      >
-        <img loading="lazy" class="w-7" src="{{ .RelPermalink }}" />
-      </div>
-    {{ end }}
+    <div
+      class="relative mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-full shadow-md shadow-zinc-800/5 ring-1 ring-zinc-900/5"
+    >
+      {{ $img := .Page.Resources.GetMatch (.Params.logo) }}
+      {{ $imgWebp := $img.Resize "64x webp q100 #ffffff" }}
+      {{ $imgJpeg := $img.Resize "64x jpg q100 #ffffff" }}
+      <picture>
+        <source
+          srcset="{{ $imgWebp.RelPermalink }}"
+          type="image/webp"
+          loading="lazy"
+          class="w-8"
+        />
+        <source
+          srcset="{{ $imgJpeg.RelPermalink }}"
+          type="image/jpeg"
+          loading="lazy"
+          class="w-8"
+        />
+        <img
+          src="{{ $imgJpeg.RelPermalink }}"
+          type="image/jpeg"
+          loading="lazy"
+          class="w-8"
+        />
+      </picture>
+    </div>
     <dl class="flex flex-auto flex-wrap gap-x-2">
       <dt class="sr-only">Company or School</dt>
-      <dd class="w-full flex-none text-sm font-semibold">{{ .Title }}</dd>
-      <dt class="sr-only">Role</dt>
-      <dd class="mb-2 text-xs custom-gray-dark">{{ .Content | emojify }}</dd>
+      <dd class="resume-title flex-none text-sm font-semibold">{{ .Title }}</dd>
       <dt class="sr-only">Date</dt>
-      <dd class="ml-auto text-xs font-medium custom-gray-dark">
+      <dd class="resume-date text-xs font-medium custom-gray-dark">
         <time datetime="{{ .Params.begin }}"> {{ .Params.begin }} </time>
         <span aria-hidden="true">-</span>
         <time datetime="{{ .Params.end }}"> {{ .Params.end }} </time>
       </dd>
+      <dt class="sr-only">Role</dt>
+      <dd class="mb-2 text-xs custom-gray-dark">{{ .Content | emojify }}</dd>
     </dl>
   </li>
 </ol>
